--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false,
      "source_hidden": false
@@ -114,13 +115,7 @@
       "Requirement already satisfied: websockets>=10.0 in /Users/blink/Applications/anaconda3/lib/python3.9/site-packages (from qiskit-ibmq-provider>=0.16.0->qiskit_experiments) (10.3)\n",
       "Requirement already satisfied: websocket-client>=1.0.1 in /Users/blink/Applications/anaconda3/lib/python3.9/site-packages (from qiskit-ibmq-provider>=0.16.0->qiskit_experiments) (1.3.2)\n",
       "Requirement already satisfied: requests>=2.19 in /Users/blink/Applications/anaconda3/lib/python3.9/site-packages (from qiskit-ibmq-provider>=0.16.0->qiskit_experiments) (2.27.1)\n",
-      "Requirement already satisfied: urllib3>=1.21.1 in /Users/blink/Applications/anaconda3/lib/python3.9/site-packages (from qiskit-ibmq-provider>=0.16.0->qiskit_experiments) (1.26.9)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Requirement already satisfied: urllib3>=1.21.1 in /Users/blink/Applications/anaconda3/lib/python3.9/site-packages (from qiskit-ibmq-provider>=0.16.0->qiskit_experiments) (1.26.9)\n",
       "Requirement already satisfied: symengine>=0.9 in /Users/blink/Applications/anaconda3/lib/python3.9/site-packages (from qiskit-terra>=0.20.1->qiskit_experiments) (0.9.2)\n",
       "Requirement already satisfied: sympy>=1.3 in /Users/blink/Applications/anaconda3/lib/python3.9/site-packages (from qiskit-terra>=0.20.1->qiskit_experiments) (1.10.1)\n",
       "Requirement already satisfied: dill>=0.3 in /Users/blink/Applications/anaconda3/lib/python3.9/site-packages (from qiskit-terra>=0.20.1->qiskit_experiments) (0.3.5.1)\n",
@@ -170,13 +165,7 @@
       "Requirement already satisfied: typing-extensions>=4.0.1 in /Users/blink/Applications/anaconda3/lib/python3.9/site-packages (from azure-core>=1.19.1->azure-quantum[qiskit]==0.23.201228b1) (4.1.1)\n",
       "Requirement already satisfied: msal-extensions~=0.3.0 in /Users/blink/Applications/anaconda3/lib/python3.9/site-packages (from azure-identity>=1.6.0->azure-quantum[qiskit]==0.23.201228b1) (0.3.1)\n",
       "Requirement already satisfied: cryptography>=2.5 in /Users/blink/Applications/anaconda3/lib/python3.9/site-packages (from azure-identity>=1.6.0->azure-quantum[qiskit]==0.23.201228b1) (3.4.8)\n",
-      "Requirement already satisfied: msal<2.0.0,>=1.12.0 in /Users/blink/Applications/anaconda3/lib/python3.9/site-packages (from azure-identity>=1.6.0->azure-quantum[qiskit]==0.23.201228b1) (1.17.0)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Requirement already satisfied: msal<2.0.0,>=1.12.0 in /Users/blink/Applications/anaconda3/lib/python3.9/site-packages (from azure-identity>=1.6.0->azure-quantum[qiskit]==0.23.201228b1) (1.17.0)\n",
       "Requirement already satisfied: cffi>=1.12 in /Users/blink/Applications/anaconda3/lib/python3.9/site-packages (from cryptography>=2.5->azure-identity>=1.6.0->azure-quantum[qiskit]==0.23.201228b1) (1.15.0)\n",
       "Requirement already satisfied: pycparser in /Users/blink/Applications/anaconda3/lib/python3.9/site-packages (from cffi>=1.12->cryptography>=2.5->azure-identity>=1.6.0->azure-quantum[qiskit]==0.23.201228b1) (2.21)\n",
       "Requirement already satisfied: wrapt<2,>=1.10 in /Users/blink/Applications/anaconda3/lib/python3.9/site-packages (from deprecated>=1.2.12->azure-quantum[qiskit]==0.23.201228b1) (1.12.1)\n",
@@ -224,6 +213,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false,
      "source_hidden": false
@@ -264,6 +254,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false,
      "source_hidden": false
@@ -305,6 +296,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false,
      "source_hidden": false
@@ -350,7 +342,9 @@
     "<div class=\"alert-info\">\n",
     "Abstract:\n",
     "    Our goal with the final project is to apply two algorithms in tandem in order to simulate time-dependent Hamiltonians with quantum computation. Previously, we had determined the ground state of minimal hydrogen molecule up to the configuration interaction (Full-CI) picture directly utilizing the unitary coupled-cluster (UCC) ansatz. This, in principle, can also be done by utilizing a different method. Rather than directly computing the coefficients via a VQE algorithm, simulation of quantum dynamics can be performed by explicitly propagating the time-dependent Hamiltonian. In this work, we plan on expressing the ground state Hamiltonian in the first-order Trotterized time-evolution operator, then by performing iterative phase estimation, we can determine the ground state molecular energy of hydrogen. This work is largely inspired by this paper (1), which accumulates the phase from the PEA on an ancilla qubit, which is measured for each shot of the experiment. While the paper explicitly reports the entire potential energy surface along with the dissociation energy, within our time restraint we will focus on characterizing the minimum of the potential energy surface, giving an accurate description of the ground-state hydrogen molecule. Since PEA tends to be less resilient to error than VQE, we plan to do error characterization and correction.\n",
-    "</div>\n"
+    "</div>\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -433,6 +427,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false,
      "source_hidden": false
@@ -466,6 +461,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false,
      "source_hidden": false
@@ -501,6 +497,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false,
      "source_hidden": false
@@ -561,6 +558,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false,
      "source_hidden": false
@@ -584,9 +582,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
+     "outputs_hidden": false
     },
     "nteract": {
      "transient": {
@@ -623,9 +621,9 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
+     "outputs_hidden": false
     },
     "nteract": {
      "transient": {
@@ -643,9 +641,9 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
+     "outputs_hidden": false
     },
     "nteract": {
      "transient": {
@@ -887,9 +885,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
+     "outputs_hidden": false
     },
     "nteract": {
      "transient": {
@@ -917,9 +915,9 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
+     "outputs_hidden": false
     },
     "nteract": {
      "transient": {
@@ -944,9 +942,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
+     "outputs_hidden": false
     },
     "nteract": {
      "transient": {
@@ -1294,12 +1292,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.3"
   },
   "nteract": {
    "version": "nteract-front-end@1.0.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
