Adding determination of phi, energy, and procedural functions

--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -1116,15 +1116,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Initial definitions for our changing variables phi and k\n",
-    "phi = 0\n",
-    "k = 0\n",
-    "\n",
-    "### Function to get our circuit\n",
+    "### Functions to get our circuit, phi, and energy\n",
     "def construct_circuit(k,prev_result,t0):\n",
     "    ### Start by constructing the base circuit. This entails having a set of \n",
     "    ### three qubits and measurement of just the last qubit. \n",
@@ -1132,6 +1128,8 @@
     "    ### 1 and 2 will hold the state information for our hydrogen molecule\n",
     "\n",
     "    # Determine phi based on k\n",
+    "    phi = get_phi(prev_result)\n",
+    "    \n",
     "    \n",
     "    PEA_Circuit=QuantumCircuit(3,1)\n",
     "\n",
@@ -1180,85 +1178,136 @@
     "    PEA_Circuit.measure(0,0)\n",
     "    \n",
     "    return PEA_Circuit\n",
-    "\n"
+    "\n",
+    "### function to determine phi based on previous measurements\n",
+    "def get_phi(prev_results):\n",
+    "    sum = 0\n",
+    "    k = len(prev_results)\n",
+    "    for l in range(k):\n",
+    "        sum += prev_results[l]/(2**(l-k+1))\n",
+    "    print(sum)\n",
+    "    return sum*np.pi\n",
+    "\n",
+    "\n",
+    "### Function to return the final energy based on all measurements\n",
+    "def get_energy(prev_results,t0):\n",
+    "    b=len(prev_results)\n",
+    "    sum = 0\n",
+    "    for k in range(b):\n",
+    "        sum += prev_results[i]/(2**(k+1))\n",
+    "    return -np.pi*sum/t0\n",
+    "\n",
+    "### Function to return the majority rules candidate\n",
+    "def maj_rule(job_result):\n",
+    "    count0 = 0\n",
+    "    count1 = 0\n",
+    "    if ('0' in job_result.get_counts()):\n",
+    "        count0 = job_result.get_counts()['0']\n",
+    "    if ('1' in job_result.get_counts()):\n",
+    "        count1 = job_result.get_counts()['1']\n",
+    "    if (count0 > count1):\n",
+    "        return 0\n",
+    "    elif (count1 > count0):\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18.0\n"
+     ]
+    }
+   ],
    "source": [
-    "qc = construct_circuit(k,0,0.5)"
+    "def procedural(t0,sim,number_cycles,number_shots):\n",
+    "    ### storage values\n",
+    "    prev_res = []\n",
+    "    ### total number of cycles we would like to run\n",
+    "    for i in range(number_cycles):\n",
+    "        qc = construct_circuit(i+1,prev_res,t0)\n",
+    "        job = sim.run(qc,number_shots)\n",
+    "        ind_result = job.get_result()\n",
+    "        prev_res.append(maj_rule(ind_result))\n",
+    "    \n",
+    "    ### Once out of loop, can compute energy\n",
+    "    return get_energy(prev_res,t0)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">     ┌──────────┐┌───────┐┌───────────┐            ░ ┌───────────┐           »\n",
-       "q_0: ┤ Ry(-π/2) ├┤ Rz(0) ├┤ Rz(-0.25) ├─────■──────░─┤ Rz(-0.25) ├─────■─────»\n",
-       "     └──────────┘└───────┘└───────────┘┌────┴────┐ ░ └───────────┘     │     »\n",
-       "q_1: ──────────────────────────────────┤ Rz(0.5) ├─░───────────────────┼─────»\n",
-       "                                       └─────────┘ ░              ┌────┴────┐»\n",
-       "q_2: ──────────────────────────────────────────────░──────────────┤ Rz(0.5) ├»\n",
-       "                                                   ░              └─────────┘»\n",
-       "c: 1/════════════════════════════════════════════════════════════════════════»\n",
-       "                                                                             »\n",
-       "«      ░ ┌───────────┐                                  ░ ┌───────────┐     »\n",
-       "«q_0: ─░─┤ Rz(-0.25) ├──────────■───────────────────────░─┤ Rz(-0.25) ├─────»\n",
-       "«      ░ └┬─────────┬┘┌───┐┌────┴────┐┌───┐┌──────────┐ ░ └┬─────────┬┘┌───┐»\n",
-       "«q_1: ─░──┤ Ry(π/2) ├─┤ X ├┤ Rz(0.5) ├┤ X ├┤ Ry(-π/2) ├─░──┤ Rx(π/2) ├─┤ X ├»\n",
-       "«      ░  ├─────────┤ └─┬─┘└─────────┘└─┬─┘├──────────┤ ░  ├─────────┤ └─┬─┘»\n",
-       "«q_2: ─░──┤ Ry(π/2) ├───■───────────────■──┤ Ry(-π/2) ├─░──┤ Rx(π/2) ├───■──»\n",
-       "«      ░  └─────────┘                      └──────────┘ ░  └─────────┘      »\n",
-       "«c: 1/══════════════════════════════════════════════════════════════════════»\n",
-       "«                                                                           »\n",
-       "«                                  ░ ┌──────────┐┌─┐\n",
-       "«q_0: ─────■───────────────────────░─┤ Ry(-π/2) ├┤M├\n",
-       "«     ┌────┴────┐┌───┐┌──────────┐ ░ └──────────┘└╥┘\n",
-       "«q_1: ┤ Rz(0.5) ├┤ X ├┤ Rx(-π/2) ├─░──────────────╫─\n",
-       "«     └─────────┘└─┬─┘├──────────┤ ░              ║ \n",
-       "«q_2: ─────────────■──┤ Rx(-π/2) ├─░──────────────╫─\n",
-       "«                     └──────────┘ ░              ║ \n",
-       "«c: 1/════════════════════════════════════════════╩═\n",
-       "«                                                 0 </pre>"
+       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">     ┌──────────┐┌───────┐┌───────────┐          ░ ┌───────────┐          ░ »\n",
+       "q_0: ┤ Ry(-π/2) ├┤ Rz(0) ├┤ Rz(-0.25) ├────■─────░─┤ Rz(-0.25) ├────■─────░─»\n",
+       "     └──────────┘└───────┘└───────────┘┌───┴───┐ ░ └───────────┘    │     ░ »\n",
+       "q_1: ──────────────────────────────────┤ Rz(1) ├─░──────────────────┼─────░─»\n",
+       "                                       └───────┘ ░              ┌───┴───┐ ░ »\n",
+       "q_2: ────────────────────────────────────────────░──────────────┤ Rz(1) ├─░─»\n",
+       "                                                 ░              └───────┘ ░ »\n",
+       "c: 1/═══════════════════════════════════════════════════════════════════════»\n",
+       "                                                                            »\n",
+       "«     ┌──────────┐                                ░ ┌──────────┐              »\n",
+       "«q_0: ┤ Rz(-0.5) ├─────────■──────────────────────░─┤ Rz(-0.5) ├─────────■────»\n",
+       "«     ├─────────┬┘┌───┐┌───┴───┐┌───┐┌──────────┐ ░ ├─────────┬┘┌───┐┌───┴───┐»\n",
+       "«q_1: ┤ Ry(π/2) ├─┤ X ├┤ Rz(1) ├┤ X ├┤ Ry(-π/2) ├─░─┤ Rx(π/2) ├─┤ X ├┤ Rz(1) ├»\n",
+       "«     ├─────────┤ └─┬─┘└───────┘└─┬─┘├──────────┤ ░ ├─────────┤ └─┬─┘└───────┘»\n",
+       "«q_2: ┤ Ry(π/2) ├───■─────────────■──┤ Ry(-π/2) ├─░─┤ Rx(π/2) ├───■───────────»\n",
+       "«     └─────────┘                    └──────────┘ ░ └─────────┘               »\n",
+       "«c: 1/════════════════════════════════════════════════════════════════════════»\n",
+       "«                                                                             »\n",
+       "«                       ░ ┌──────────┐┌─┐\n",
+       "«q_0: ──────────────────░─┤ Ry(-π/2) ├┤M├\n",
+       "«     ┌───┐┌──────────┐ ░ └──────────┘└╥┘\n",
+       "«q_1: ┤ X ├┤ Rx(-π/2) ├─░──────────────╫─\n",
+       "«     └─┬─┘├──────────┤ ░              ║ \n",
+       "«q_2: ──■──┤ Rx(-π/2) ├─░──────────────╫─\n",
+       "«          └──────────┘ ░              ║ \n",
+       "«c: 1/═════════════════════════════════╩═\n",
+       "«                                      0 </pre>"
       ],
       "text/plain": [
-       "     ┌──────────┐┌───────┐┌───────────┐            ░ ┌───────────┐           »\n",
-       "q_0: ┤ Ry(-π/2) ├┤ Rz(0) ├┤ Rz(-0.25) ├─────■──────░─┤ Rz(-0.25) ├─────■─────»\n",
-       "     └──────────┘└───────┘└───────────┘┌────┴────┐ ░ └───────────┘     │     »\n",
-       "q_1: ──────────────────────────────────┤ Rz(0.5) ├─░───────────────────┼─────»\n",
-       "                                       └─────────┘ ░              ┌────┴────┐»\n",
-       "q_2: ──────────────────────────────────────────────░──────────────┤ Rz(0.5) ├»\n",
-       "                                                   ░              └─────────┘»\n",
-       "c: 1/════════════════════════════════════════════════════════════════════════»\n",
-       "                                                                             »\n",
-       "«      ░ ┌───────────┐                                  ░ ┌───────────┐     »\n",
-       "«q_0: ─░─┤ Rz(-0.25) ├──────────■───────────────────────░─┤ Rz(-0.25) ├─────»\n",
-       "«      ░ └┬─────────┬┘┌───┐┌────┴────┐┌───┐┌──────────┐ ░ └┬─────────┬┘┌───┐»\n",
-       "«q_1: ─░──┤ Ry(π/2) ├─┤ X ├┤ Rz(0.5) ├┤ X ├┤ Ry(-π/2) ├─░──┤ Rx(π/2) ├─┤ X ├»\n",
-       "«      ░  ├─────────┤ └─┬─┘└─────────┘└─┬─┘├──────────┤ ░  ├─────────┤ └─┬─┘»\n",
-       "«q_2: ─░──┤ Ry(π/2) ├───■───────────────■──┤ Ry(-π/2) ├─░──┤ Rx(π/2) ├───■──»\n",
-       "«      ░  └─────────┘                      └──────────┘ ░  └─────────┘      »\n",
-       "«c: 1/══════════════════════════════════════════════════════════════════════»\n",
-       "«                                                                           »\n",
-       "«                                  ░ ┌──────────┐┌─┐\n",
-       "«q_0: ─────■───────────────────────░─┤ Ry(-π/2) ├┤M├\n",
-       "«     ┌────┴────┐┌───┐┌──────────┐ ░ └──────────┘└╥┘\n",
-       "«q_1: ┤ Rz(0.5) ├┤ X ├┤ Rx(-π/2) ├─░──────────────╫─\n",
-       "«     └─────────┘└─┬─┘├──────────┤ ░              ║ \n",
-       "«q_2: ─────────────■──┤ Rx(-π/2) ├─░──────────────╫─\n",
-       "«                     └──────────┘ ░              ║ \n",
-       "«c: 1/════════════════════════════════════════════╩═\n",
-       "«                                                 0 "
+       "     ┌──────────┐┌───────┐┌───────────┐          ░ ┌───────────┐          ░ »\n",
+       "q_0: ┤ Ry(-π/2) ├┤ Rz(0) ├┤ Rz(-0.25) ├────■─────░─┤ Rz(-0.25) ├────■─────░─»\n",
+       "     └──────────┘└───────┘└───────────┘┌───┴───┐ ░ └───────────┘    │     ░ »\n",
+       "q_1: ──────────────────────────────────┤ Rz(1) ├─░──────────────────┼─────░─»\n",
+       "                                       └───────┘ ░              ┌───┴───┐ ░ »\n",
+       "q_2: ────────────────────────────────────────────░──────────────┤ Rz(1) ├─░─»\n",
+       "                                                 ░              └───────┘ ░ »\n",
+       "c: 1/═══════════════════════════════════════════════════════════════════════»\n",
+       "                                                                            »\n",
+       "«     ┌──────────┐                                ░ ┌──────────┐              »\n",
+       "«q_0: ┤ Rz(-0.5) ├─────────■──────────────────────░─┤ Rz(-0.5) ├─────────■────»\n",
+       "«     ├─────────┬┘┌───┐┌───┴───┐┌───┐┌──────────┐ ░ ├─────────┬┘┌───┐┌───┴───┐»\n",
+       "«q_1: ┤ Ry(π/2) ├─┤ X ├┤ Rz(1) ├┤ X ├┤ Ry(-π/2) ├─░─┤ Rx(π/2) ├─┤ X ├┤ Rz(1) ├»\n",
+       "«     ├─────────┤ └─┬─┘└───────┘└─┬─┘├──────────┤ ░ ├─────────┤ └─┬─┘└───────┘»\n",
+       "«q_2: ┤ Ry(π/2) ├───■─────────────■──┤ Ry(-π/2) ├─░─┤ Rx(π/2) ├───■───────────»\n",
+       "«     └─────────┘                    └──────────┘ ░ └─────────┘               »\n",
+       "«c: 1/════════════════════════════════════════════════════════════════════════»\n",
+       "«                                                                             »\n",
+       "«                       ░ ┌──────────┐┌─┐\n",
+       "«q_0: ──────────────────░─┤ Ry(-π/2) ├┤M├\n",
+       "«     ┌───┐┌──────────┐ ░ └──────────┘└╥┘\n",
+       "«q_1: ┤ X ├┤ Rx(-π/2) ├─░──────────────╫─\n",
+       "«     └─┬─┘├──────────┤ ░              ║ \n",
+       "«q_2: ──■──┤ Rx(-π/2) ├─░──────────────╫─\n",
+       "«          └──────────┘ ░              ║ \n",
+       "«c: 1/═════════════════════════════════╩═\n",
+       "«                                      0 "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
