--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 111,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false,
@@ -235,7 +235,7 @@
     "from IPython.core.display import HTML \n",
     "\n",
     "import qiskit\n",
-    "\n",
+    "from qiskit import transpile\n",
     "from qiskit.quantum_info import DensityMatrix\n",
     "import qiskit.quantum_info as qi\n",
     "\n",
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 90,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false,
@@ -307,7 +307,7 @@
    "source": [
     "ionq_simulator_backend = provider.get_backend(\"ionq.simulator\")\n",
     "ionq_qpu_backend = provider.get_backend(\"ionq.qpu\")\n",
-    "aer_simulator_backend = Aer.get_backend('aer_simulator')"
+    "aer_simulator_backend = Aer.get_backend('qasm_simulator')"
    ]
   },
   {
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 91,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false,
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 92,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false,
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 93,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false,
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 94,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false,
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 95,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 96,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1170,22 +1170,22 @@
     "    \n",
     "    \n",
     "    PEA_Circuit=QuantumCircuit(3,1)\n",
-    "\n",
-    "    PEA_Circuit.ry(-np.pi/2,0)\n",
-    "\n",
+    "    PEA_Circuit.x(1)\n",
+    "    PEA_Circuit.h(0)\n",
     "    PEA_Circuit.rz(phi,0)\n",
-    "\n",
+    "    PEA_Circuit.barrier()\n",
     "    ### Now we apply our unitary Trotter, which is a set of applied gates to\n",
     "    # simulate the Hamiltonian. The four hamiltonians\n",
     "    # are applied based off Appendix C in the paper:\n",
     "    # https://journals.aps.org/prx/pdf/10.1103/PhysRevX.6.031007.\n",
     "    #Z0 rotation\n",
     "    PEA_Circuit.rz(-t0/2,0)\n",
-    "    PEA_Circuit.crz(2**k*t0,0,1)\n",
+    "    PEA_Circuit.crz(-2**k*t0,0,1)\n",
     "    PEA_Circuit.barrier()\n",
+    "    \n",
     "    #Z1 rotation\n",
     "    PEA_Circuit.rz(-t0/2,0)\n",
-    "    PEA_Circuit.crz(2**k*t0,0,2)\n",
+    "    PEA_Circuit.crz(-2**k*t0,0,2)\n",
     "    PEA_Circuit.barrier()\n",
     "\n",
     "    # X0X1\n",
@@ -1193,7 +1193,7 @@
     "    PEA_Circuit.ry(np.pi/2,1)\n",
     "    PEA_Circuit.ry(np.pi/2,2)\n",
     "    PEA_Circuit.cx(2,1)\n",
-    "    PEA_Circuit.crz(2**k*t0,0,1)\n",
+    "    PEA_Circuit.crz(-2**k*t0,0,1)\n",
     "    PEA_Circuit.cx(2,1)\n",
     "    PEA_Circuit.ry(-np.pi/2,1)\n",
     "    PEA_Circuit.ry(-np.pi/2,2)\n",
@@ -1204,14 +1204,14 @@
     "    PEA_Circuit.rx(np.pi/2,1)\n",
     "    PEA_Circuit.rx(np.pi/2,2)\n",
     "    PEA_Circuit.cx(2,1)\n",
-    "    PEA_Circuit.crz(2**k*t0,0,1)\n",
+    "    PEA_Circuit.crz(-2**k*t0,0,1)\n",
     "    PEA_Circuit.cx(2,1)\n",
     "    PEA_Circuit.rx(-np.pi/2,1)\n",
     "    PEA_Circuit.rx(-np.pi/2,2)\n",
     "    PEA_Circuit.barrier()\n",
     "    \n",
     "    # Final rotation on ancilla\n",
-    "    PEA_Circuit.ry(-np.pi/2,0)\n",
+    "    PEA_Circuit.h(0)\n",
     "    \n",
     "    PEA_Circuit.measure(0,0)\n",
     "    \n",
@@ -1223,7 +1223,6 @@
     "    k = len(prev_results)\n",
     "    for l in range(k):\n",
     "        sum += prev_results[l]/(2**(l-k+1))\n",
-    "    print(sum)\n",
     "    return sum*np.pi\n",
     "\n",
     "\n",
@@ -1232,7 +1231,7 @@
     "    b=len(prev_results)\n",
     "    sum = 0\n",
     "    for k in range(b):\n",
-    "        sum += prev_results[i]/(2**(k+1))\n",
+    "        sum += prev_results[k]/(2**(k+1))\n",
     "    return -np.pi*sum/t0\n",
     "\n",
     "### Function to return the majority rules candidate\n",
@@ -1253,26 +1252,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 127,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "18.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def procedural(t0,sim,number_cycles,number_shots):\n",
+    "def procedural(t0,backend,number_cycles,number_shots):\n",
     "    ### storage values\n",
     "    prev_res = []\n",
     "    ### total number of cycles we would like to run\n",
     "    for i in range(number_cycles):\n",
     "        qc = construct_circuit(i+1,prev_res,t0)\n",
-    "        job = sim.run(qc,number_shots)\n",
-    "        ind_result = job.get_result()\n",
+    "        qc_trans = transpile(qc,backend)\n",
+    "        job = backend.run(qc_trans,number_shots)\n",
+    "        ind_result = job.result()\n",
     "        prev_res.append(maj_rule(ind_result))\n",
     "    \n",
     "    ### Once out of loop, can compute energy\n",
@@ -1281,77 +1273,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">     ┌──────────┐┌───────┐┌───────────┐          ░ ┌───────────┐          ░ »\n",
-       "q_0: ┤ Ry(-π/2) ├┤ Rz(0) ├┤ Rz(-0.25) ├────■─────░─┤ Rz(-0.25) ├────■─────░─»\n",
-       "     └──────────┘└───────┘└───────────┘┌───┴───┐ ░ └───────────┘    │     ░ »\n",
-       "q_1: ──────────────────────────────────┤ Rz(1) ├─░──────────────────┼─────░─»\n",
-       "                                       └───────┘ ░              ┌───┴───┐ ░ »\n",
-       "q_2: ────────────────────────────────────────────░──────────────┤ Rz(1) ├─░─»\n",
-       "                                                 ░              └───────┘ ░ »\n",
-       "c: 1/═══════════════════════════════════════════════════════════════════════»\n",
-       "                                                                            »\n",
-       "«     ┌──────────┐                                ░ ┌──────────┐              »\n",
-       "«q_0: ┤ Rz(-0.5) ├─────────■──────────────────────░─┤ Rz(-0.5) ├─────────■────»\n",
-       "«     ├─────────┬┘┌───┐┌───┴───┐┌───┐┌──────────┐ ░ ├─────────┬┘┌───┐┌───┴───┐»\n",
-       "«q_1: ┤ Ry(π/2) ├─┤ X ├┤ Rz(1) ├┤ X ├┤ Ry(-π/2) ├─░─┤ Rx(π/2) ├─┤ X ├┤ Rz(1) ├»\n",
-       "«     ├─────────┤ └─┬─┘└───────┘└─┬─┘├──────────┤ ░ ├─────────┤ └─┬─┘└───────┘»\n",
-       "«q_2: ┤ Ry(π/2) ├───■─────────────■──┤ Ry(-π/2) ├─░─┤ Rx(π/2) ├───■───────────»\n",
-       "«     └─────────┘                    └──────────┘ ░ └─────────┘               »\n",
-       "«c: 1/════════════════════════════════════════════════════════════════════════»\n",
-       "«                                                                             »\n",
-       "«                       ░ ┌──────────┐┌─┐\n",
-       "«q_0: ──────────────────░─┤ Ry(-π/2) ├┤M├\n",
-       "«     ┌───┐┌──────────┐ ░ └──────────┘└╥┘\n",
-       "«q_1: ┤ X ├┤ Rx(-π/2) ├─░──────────────╫─\n",
-       "«     └─┬─┘├──────────┤ ░              ║ \n",
-       "«q_2: ──■──┤ Rx(-π/2) ├─░──────────────╫─\n",
-       "«          └──────────┘ ░              ║ \n",
-       "«c: 1/═════════════════════════════════╩═\n",
-       "«                                      0 </pre>"
-      ],
-      "text/plain": [
-       "     ┌──────────┐┌───────┐┌───────────┐          ░ ┌───────────┐          ░ »\n",
-       "q_0: ┤ Ry(-π/2) ├┤ Rz(0) ├┤ Rz(-0.25) ├────■─────░─┤ Rz(-0.25) ├────■─────░─»\n",
-       "     └──────────┘└───────┘└───────────┘┌───┴───┐ ░ └───────────┘    │     ░ »\n",
-       "q_1: ──────────────────────────────────┤ Rz(1) ├─░──────────────────┼─────░─»\n",
-       "                                       └───────┘ ░              ┌───┴───┐ ░ »\n",
-       "q_2: ────────────────────────────────────────────░──────────────┤ Rz(1) ├─░─»\n",
-       "                                                 ░              └───────┘ ░ »\n",
-       "c: 1/═══════════════════════════════════════════════════════════════════════»\n",
-       "                                                                            »\n",
-       "«     ┌──────────┐                                ░ ┌──────────┐              »\n",
-       "«q_0: ┤ Rz(-0.5) ├─────────■──────────────────────░─┤ Rz(-0.5) ├─────────■────»\n",
-       "«     ├─────────┬┘┌───┐┌───┴───┐┌───┐┌──────────┐ ░ ├─────────┬┘┌───┐┌───┴───┐»\n",
-       "«q_1: ┤ Ry(π/2) ├─┤ X ├┤ Rz(1) ├┤ X ├┤ Ry(-π/2) ├─░─┤ Rx(π/2) ├─┤ X ├┤ Rz(1) ├»\n",
-       "«     ├─────────┤ └─┬─┘└───────┘└─┬─┘├──────────┤ ░ ├─────────┤ └─┬─┘└───────┘»\n",
-       "«q_2: ┤ Ry(π/2) ├───■─────────────■──┤ Ry(-π/2) ├─░─┤ Rx(π/2) ├───■───────────»\n",
-       "«     └─────────┘                    └──────────┘ ░ └─────────┘               »\n",
-       "«c: 1/════════════════════════════════════════════════════════════════════════»\n",
-       "«                                                                             »\n",
-       "«                       ░ ┌──────────┐┌─┐\n",
-       "«q_0: ──────────────────░─┤ Ry(-π/2) ├┤M├\n",
-       "«     ┌───┐┌──────────┐ ░ └──────────┘└╥┘\n",
-       "«q_1: ┤ X ├┤ Rx(-π/2) ├─░──────────────╫─\n",
-       "«     └─┬─┘├──────────┤ ░              ║ \n",
-       "«q_2: ──■──┤ Rx(-π/2) ├─░──────────────╫─\n",
-       "«          └──────────┘ ░              ║ \n",
-       "«c: 1/═════════════════════════════════╩═\n",
-       "«                                      0 "
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.6270644019506281\n"
+     ]
     }
    ],
    "source": [
-    "qc.draw()"
+    "Energy = procedural(3.340,aer_simulator_backend,500,1000)\n",
+    "print(Energy)"
    ]
   },
   {
@@ -1373,14 +1308,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">     ┌───┐┌───────┐ ░ ┌───────┐          ░ ┌───────┐          ░  ┌───────┐ »\n",
+       "q_0: ┤ H ├┤ Rz(0) ├─░─┤ Rz(0) ├────■─────░─┤ Rz(0) ├────■─────░──┤ Rz(0) ├─»\n",
+       "     ├───┤└───────┘ ░ └───────┘┌───┴───┐ ░ └───────┘    │     ░ ┌┴───────┴┐»\n",
+       "q_1: ┤ X ├──────────░──────────┤ Rz(0) ├─░──────────────┼─────░─┤ Ry(π/2) ├»\n",
+       "     └───┘          ░          └───────┘ ░          ┌───┴───┐ ░ ├─────────┤»\n",
+       "q_2: ───────────────░────────────────────░──────────┤ Rz(0) ├─░─┤ Ry(π/2) ├»\n",
+       "                    ░                    ░          └───────┘ ░ └─────────┘»\n",
+       "c: 1/══════════════════════════════════════════════════════════════════════»\n",
+       "                                                                           »\n",
+       "«                                     ░  ┌───────┐                    »\n",
+       "«q_0: ─────────■──────────────────────░──┤ Rz(0) ├──────────■─────────»\n",
+       "«     ┌───┐┌───┴───┐┌───┐┌──────────┐ ░ ┌┴───────┴┐┌───┐┌───┴───┐┌───┐»\n",
+       "«q_1: ┤ X ├┤ Rz(0) ├┤ X ├┤ Ry(-π/2) ├─░─┤ Rx(π/2) ├┤ X ├┤ Rz(0) ├┤ X ├»\n",
+       "«     └─┬─┘└───────┘└─┬─┘├──────────┤ ░ ├─────────┤└─┬─┘└───────┘└─┬─┘»\n",
+       "«q_2: ──■─────────────■──┤ Ry(-π/2) ├─░─┤ Rx(π/2) ├──■─────────────■──»\n",
+       "«                        └──────────┘ ░ └─────────┘                   »\n",
+       "«c: 1/════════════════════════════════════════════════════════════════»\n",
+       "«                                                                     »\n",
+       "«                  ░ ┌───┐┌─┐\n",
+       "«q_0: ─────────────░─┤ H ├┤M├\n",
+       "«     ┌──────────┐ ░ └───┘└╥┘\n",
+       "«q_1: ┤ Rx(-π/2) ├─░───────╫─\n",
+       "«     ├──────────┤ ░       ║ \n",
+       "«q_2: ┤ Rx(-π/2) ├─░───────╫─\n",
+       "«     └──────────┘ ░       ║ \n",
+       "«c: 1/═════════════════════╩═\n",
+       "«                          0 </pre>"
+      ],
+      "text/plain": [
+       "     ┌───┐┌───────┐ ░ ┌───────┐          ░ ┌───────┐          ░  ┌───────┐ »\n",
+       "q_0: ┤ H ├┤ Rz(0) ├─░─┤ Rz(0) ├────■─────░─┤ Rz(0) ├────■─────░──┤ Rz(0) ├─»\n",
+       "     ├───┤└───────┘ ░ └───────┘┌───┴───┐ ░ └───────┘    │     ░ ┌┴───────┴┐»\n",
+       "q_1: ┤ X ├──────────░──────────┤ Rz(0) ├─░──────────────┼─────░─┤ Ry(π/2) ├»\n",
+       "     └───┘          ░          └───────┘ ░          ┌───┴───┐ ░ ├─────────┤»\n",
+       "q_2: ───────────────░────────────────────░──────────┤ Rz(0) ├─░─┤ Ry(π/2) ├»\n",
+       "                    ░                    ░          └───────┘ ░ └─────────┘»\n",
+       "c: 1/══════════════════════════════════════════════════════════════════════»\n",
+       "                                                                           »\n",
+       "«                                     ░  ┌───────┐                    »\n",
+       "«q_0: ─────────■──────────────────────░──┤ Rz(0) ├──────────■─────────»\n",
+       "«     ┌───┐┌───┴───┐┌───┐┌──────────┐ ░ ┌┴───────┴┐┌───┐┌───┴───┐┌───┐»\n",
+       "«q_1: ┤ X ├┤ Rz(0) ├┤ X ├┤ Ry(-π/2) ├─░─┤ Rx(π/2) ├┤ X ├┤ Rz(0) ├┤ X ├»\n",
+       "«     └─┬─┘└───────┘└─┬─┘├──────────┤ ░ ├─────────┤└─┬─┘└───────┘└─┬─┘»\n",
+       "«q_2: ──■─────────────■──┤ Ry(-π/2) ├─░─┤ Rx(π/2) ├──■─────────────■──»\n",
+       "«                        └──────────┘ ░ └─────────┘                   »\n",
+       "«c: 1/════════════════════════════════════════════════════════════════»\n",
+       "«                                                                     »\n",
+       "«                  ░ ┌───┐┌─┐\n",
+       "«q_0: ─────────────░─┤ H ├┤M├\n",
+       "«     ┌──────────┐ ░ └───┘└╥┘\n",
+       "«q_1: ┤ Rx(-π/2) ├─░───────╫─\n",
+       "«     ├──────────┤ ░       ║ \n",
+       "«q_2: ┤ Rx(-π/2) ├─░───────╫─\n",
+       "«     └──────────┘ ░       ║ \n",
+       "«c: 1/═════════════════════╩═\n",
+       "«                          0 "
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# In reserve:\n",
     "\n",
-    "# N. Klco and M. J. Savage, Phys. Rev. A 99, 052335 (2019)\n"
+    "# N. Klco and M. J. Savage, Phys. Rev. A 99, 052335 (2019)\n",
+    "qc.draw()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1402,7 +1411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.3"
+   "version": "3.10.0"
   },
   "nteract": {
    "version": "nteract-front-end@1.0.0"
