adding some theory

--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false,
      "source_hidden": false
@@ -69,13 +70,7 @@
       "Requirement already satisfied: requests-ntlm>=1.1.0 in /Users/ivan/miniconda3/envs/Sp2022QComp/lib/python3.10/site-packages (from qiskit-ibmq-provider>=0.16.0->qiskit_experiments) (1.1.0)\n",
       "Requirement already satisfied: urllib3>=1.21.1 in /Users/ivan/miniconda3/envs/Sp2022QComp/lib/python3.10/site-packages (from qiskit-ibmq-provider>=0.16.0->qiskit_experiments) (1.26.9)\n",
       "Requirement already satisfied: websocket-client>=1.0.1 in /Users/ivan/miniconda3/envs/Sp2022QComp/lib/python3.10/site-packages (from qiskit-ibmq-provider>=0.16.0->qiskit_experiments) (1.3.1)\n",
-      "Requirement already satisfied: requests>=2.19 in /Users/ivan/miniconda3/envs/Sp2022QComp/lib/python3.10/site-packages (from qiskit-ibmq-provider>=0.16.0->qiskit_experiments) (2.27.1)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Requirement already satisfied: requests>=2.19 in /Users/ivan/miniconda3/envs/Sp2022QComp/lib/python3.10/site-packages (from qiskit-ibmq-provider>=0.16.0->qiskit_experiments) (2.27.1)\n",
       "Requirement already satisfied: sympy>=1.3 in /Users/ivan/miniconda3/envs/Sp2022QComp/lib/python3.10/site-packages (from qiskit-terra>=0.19.0->qiskit_experiments) (1.10.1)\n",
       "Requirement already satisfied: dill>=0.3 in /Users/ivan/miniconda3/envs/Sp2022QComp/lib/python3.10/site-packages (from qiskit-terra>=0.19.0->qiskit_experiments) (0.3.4)\n",
       "Requirement already satisfied: symengine>=0.8 in /Users/ivan/miniconda3/envs/Sp2022QComp/lib/python3.10/site-packages (from qiskit-terra>=0.19.0->qiskit_experiments) (0.9.2)\n",
@@ -107,7 +102,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false,
      "source_hidden": false
@@ -160,6 +157,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false,
      "source_hidden": false
@@ -202,7 +200,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false,
      "source_hidden": false
@@ -291,24 +291,33 @@
     "<div class=\"alert-info\">\n",
     "Abstract:\n",
     "    Our goal with the final project is to apply two algorithms in tandem in order to simulate time-dependent Hamiltonians with quantum computation. Previously, we had determined the ground state of minimal hydrogen molecule up to the configuration interaction (Full-CI) picture directly utilizing the unitary coupled-cluster (UCC) ansatz. This, in principle, can also be done by utilizing a different method. Rather than directly computing the coefficients via a VQE algorithm, simulation of quantum dynamics can be performed by explicitly propagating the time-dependent Hamiltonian. In this work, we plan on expressing the ground state Hamiltonian in the first-order Trotterized time-evolution operator, then by performing iterative phase estimation, we can determine the ground state molecular energy of hydrogen. This work is largely inspired by this paper (1), which accumulates the phase from the PEA on an ancilla qubit, which is measured for each shot of the experiment. While the paper explicitly reports the entire potential energy surface along with the dissociation energy, within our time restraint we will focus on characterizing the minimum of the potential energy surface, giving an accurate description of the ground-state hydrogen molecule. Since PEA tends to be less resilient to error than VQE, we plan to do error characterization and correction.\n",
-    "</div>\n",
-    "\n",
-    "\n"
+    "</div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Theory and Backgound "
+    "## Theory and Backgound"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The structure of atoms and molecules is described by quantum mechanics, and quantum computers can simulate them better than traditional computers. Finding solutions to the structure problems traditionally requires high-performance computers with a computational cost that scales exponentially with the size of the system. But the optimization of molecular energies using medium-sized quantum computers has proven efficient for few-electron molecules. In CHEM560, we experimented on the variational quantum eigensolver (VQE) for the hydrogen molecule. In this project, we will demonstrate another algorithm of quantum simulation using Trotterized simulation and the quantum phase estimation algorithm (PEA)<sup>[1]</sup>. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Quantum Phase Estimation\n",
+    "\n",
+    "PEA is an algorithm to estimate the phase (or eigenvalue) of an eigenvector of a unitary operator. Given a unitary operator $U$, where all the eigenvalues have a norm of 1, the algorithm estimates $U\\vert\\psi \\rangle =e^{\\boldsymbol{2\\pi i} \\theta }|\\psi \\rangle$. The quantum state $|\\psi\\rangle$ is an eigenvector and $e^{\\boldsymbol{2\\pi i}\\theta}$ is the corresponding eigenvalue <sup>[6]</sup>.\n",
+    "\n",
+    "The general PEA curcuit contains some qubits (ancilla) to represent the state $|\\psi\\rangle$ and $t$ counting qubits for the register. The intuition of the algorithm is to use phase kickback to write the phase of $U$ to the counting register in the Fourier basis, and then use the inverse QFT to translate it into the computational basis for measurement."
+   ]
   },
   {
    "attachments": {
@@ -1034,9 +1043,9 @@
    "cell_type": "code",
    "execution_count": 91,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
+     "outputs_hidden": false
     },
     "nteract": {
      "transient": {
@@ -1067,9 +1076,9 @@
    "cell_type": "code",
    "execution_count": 92,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
+     "outputs_hidden": false
     },
     "nteract": {
      "transient": {
@@ -1102,9 +1111,9 @@
    "cell_type": "code",
    "execution_count": 93,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
+     "outputs_hidden": false
     },
     "nteract": {
      "transient": {
@@ -1162,9 +1171,9 @@
    "cell_type": "code",
    "execution_count": 94,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
+     "outputs_hidden": false
     },
     "nteract": {
      "transient": {
@@ -1185,6 +1194,7 @@
    "cell_type": "code",
    "execution_count": 95,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -1223,6 +1233,7 @@
    "cell_type": "code",
    "execution_count": 96,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -1242,6 +1253,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -1485,6 +1497,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -1514,6 +1527,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -1540,6 +1554,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
+    "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     },
@@ -1860,7 +1875,9 @@
     "\n",
     "<sup>[4]</sup> K. Wright, K. Beck, S. Debnath, J. Amini, Y. Nam, N. Grzesiak, J.-S. Chen, N. Pisenti, M. Chmielewski, C. Collins, <em>et al</em>., <em>Benchmarking an 11-qubit quantum computer</em>, Nat. Commun. **10** (1), 1 (2019)\n",
     "\n",
-    "<sup>[5]</sup> N. Klco and M. J. Savage, <em>Digitization of Scalar Fields for Quantum Computing</em>, Phys. Rev. A 99, 052335 (2019)"
+    "<sup>[5]</sup> N. Klco and M. J. Savage, <em>Digitization of Scalar Fields for Quantum Computing</em>, Phys. Rev. A 99, 052335 (2019)\n",
+    "\n",
+    "<sup>[6]</sup> A.Yu.Kitaev, <em>Quantum measurements and the Abelian Stabilizer Problem</em> (arXiv:quant-ph/9511026)"
    ]
   },
   {
@@ -1968,7 +1985,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.3"
   },
   "nteract": {
    "version": "nteract-front-end@1.0.0"
