adding theory for iterative PEA

--- a/FinalProject_Updated.ipynb
+++ b/FinalProject_Updated.ipynb
@@ -393,7 +393,35 @@
    "source": [
     "### Iterative Quantum Phase Estimation\n",
     "\n",
-    "\n"
+    "The Iterative Quantum Phase Estimation algorithm implements quantum phase estimation using only one auxiliary qubit, hence the accuracy of the algorithm is restricted by the number of iterations instead of the number of counting qubits, reducing the costs for hardware requirements and gate errors.\n",
+    "\n",
+    "We can rewrite the eigenvalue problem as $U |\\Psi\\rangle = e^{i \\phi} | \\Psi \\rangle$, with $\\phi = 2 \\pi \\varphi=2\\pi( \\varphi_1/2 + \\varphi_2/4 + ... + \\varphi_m/2^m) =2\\pi (0.\\varphi_1 \\varphi_2 ... \\varphi_m)$.\n",
+    "\n",
+    "Assume we have a system of two qubits, $q_0$ and $q_1$, where $q_0$ is auxiliary qubit and $q_1$ represents the physical system on which the unitary $U$ operates. We initialize them as $q_0 \\rightarrow |+\\rangle$ and $q_1 \\rightarrow |\\Psi \\rangle$, and apply control-U between $q_0$ and $q_1$ $2^t$ times to change the state of $q_0$ to $|0\\rangle + e^{i 2 \\pi 2^{t} \\varphi} | 1 \\rangle$. In other words, the phase of $U$ has been kicked back into $q_0$ as many times as the control operation has been performed.\n",
+    "\n",
+    "For $t=0$, the phase encoded into $q_0$ would be $e^{i 2 \\pi 2^{0} \\varphi} = e^{i 2 \\pi \\varphi} = e^{i 2 \\pi 0.\\varphi_1 \\varphi_2 ... \\varphi_m}$.\n",
+    "\n",
+    "For $t=1$, the phase would be $e^{i 2 \\pi 2^{1} \\varphi} = e^{i 2 \\pi \\varphi_1} e^{i 2 \\pi 0.\\varphi_2 \\varphi_3 ... \\varphi_m}$.\n",
+    "\n",
+    "...\n",
+    "\n",
+    "For $t=m-1$, $e^{i 2 \\pi 2^{m-1} \\varphi} = e^{i 2 \\pi 2^{m-2} \\varphi_1} e^{i 2 \\pi 2^{m-3} \\varphi_2} ... e^{i 2 \\pi 2^{-1} \\varphi_m} = e^{i 2 \\pi 0.\\varphi_m}$.\n",
+    "\n",
+    "Here, the state of $q_0$ is $|0\\rangle + e^{i 2 \\pi 0.\\varphi_m}|1\\rangle$, which gives $|+\\rangle$ if $\\varphi_m = 0$ and $|-\\rangle$ if $\\varphi_m = 1$. When we measure $q_0$ in x-basis, the result will be $|0\\rangle$ and $|1\\rangle$, respectively.\n",
+    "\n",
+    "In the first step, we directly measure the least significant bit $\\varphi_m$ by initializing the 2-qubit registers as described above ( $q_0 \\rightarrow |+\\rangle$ and $q_1 \\rightarrow |\\Psi \\rangle$ ), performing $2^{m-1}$ control-$U$ operations between the qubits, and measuring $q_0$ in the x-basis.\n",
+    "\n",
+    "In the second step, we initialize the systems in the same way and apply $2^{m-2}$ control-$U$ operations. The relative phase in $q_0$ after these operations now becomes $e^{i 2 \\pi 0.\\varphi_{m-1}\\varphi_{m}}= e^{i 2 \\pi 0.\\varphi_{m-1}} e^{i 2 \\pi \\varphi_m/4}$. \n",
+    "To extract the phase bit $\\varphi_{m-1}$, we first need to perform a phase correction by rotating around the $Z-$axis of angle $-2 \\pi \\varphi_m/4=-\\pi \\varphi_m/2$, which results in the state of  $q_0$ to be $|0\\rangle + e^{i 2 \\pi 0.\\varphi_{m-1}} | 1 \\rangle$. A measurement on $q_0$ in x-basis gives the phase bit $\\varphi_{m-1}$.\n",
+    "\n",
+    "In iteration, the $k$th step requires the application of control-$U$ $2^{m-k}$ times, a rotation around $Z$ of angle $\\omega_k = -2 \\pi 0.0\\varphi_{m-k+2} ... \\varphi_m$, and a measurement of $q_0$ in x-basis to obtain $\\varphi_{m-k+1}$,: a Hadamard transform to $q_0$, and a measurement of $q_0$ in the standard basis. Note that $q_1$ remains in the state $|\\Psi\\rangle$ throughout the algorithm."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### "
    ]
   },
   {
