--- a/FinalProject_Updated.ipynb
+++ b/FinalProject_Updated.ipynb
@@ -414,14 +414,7 @@
     "In the second step, we initialize the systems in the same way and apply $2^{m-2}$ control-$U$ operations. The relative phase in $q_0$ after these operations now becomes $e^{i 2 \\pi 0.\\varphi_{m-1}\\varphi_{m}}= e^{i 2 \\pi 0.\\varphi_{m-1}} e^{i 2 \\pi \\varphi_m/4}$. \n",
     "To extract the phase bit $\\varphi_{m-1}$, we first need to perform a phase correction by rotating around the $Z-$axis of angle $-2 \\pi \\varphi_m/4=-\\pi \\varphi_m/2$, which results in the state of  $q_0$ to be $|0\\rangle + e^{i 2 \\pi 0.\\varphi_{m-1}} | 1 \\rangle$. A measurement on $q_0$ in x-basis gives the phase bit $\\varphi_{m-1}$.\n",
     "\n",
-    "In iteration, the $k$th step requires the application of control-$U$ $2^{m-k}$ times, a rotation around $Z$ of angle $\\omega_k = -2 \\pi 0.0\\varphi_{m-k+2} ... \\varphi_m$, and a measurement of $q_0$ in x-basis to obtain $\\varphi_{m-k+1}$,: a Hadamard transform to $q_0$, and a measurement of $q_0$ in the standard basis. Note that $q_1$ remains in the state $|\\Psi\\rangle$ throughout the algorithm."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### "
+    "In iteration, the $k$th step requires the application of control-$U$ $2^{m-k}$ times, a rotation around $Z$ of angle $\\omega_k = -2 \\pi 0.0\\varphi_{m-k+2} ... \\varphi_m$, and a measurement of $q_0$ in x-basis to obtain $\\varphi_{m-k+1}$,: a Hadamard transform to $q_0$, and a measurement of $q_0$ in the standard basis."
    ]
   },
   {
@@ -433,9 +426,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Trotterization\n",
+    "### Trotterization approximation to the time-evolution operator\n",
     "\n",
-    "PEA works by preparing an initial state on the main qubit register, y-rotating the ancilla qubit's state into a superposition of |0>'s and |1>'s, applying a time evolution to the main qubit register controlled on the ancilla, reversing the y-rotation, and measuring. One of the most common ways to implement time evolution is through Trotterization.\n",
+    "PEA works by preparing an initial state on the main qubit register, y-rotating the ancilla qubit's state into a superposition of |0>'s and |1>'s, applying the unitary $U$ to the main qubit register controlled on the ancilla, reversing the y-rotation, and measuring. For the molecular energies we are interested in, the unitary matrix will be the time evolution operator representing the Hamiltonian One of the most common ways to implement time evolution is through Trotterization.\n",
     "\n",
     "As we in this class, Chemistry 560, learned when we implemented the Variational Quantum Eigensolver (VQE), it is not always straightforward to express a Hamiltonian directly on a quantum device. One way to remedy this issue is to decompose the Hamiltonian into tensor products of Pauli matrices. For the second-quantized hydrogen molecular Hamiltonian in the Hartree-Fock basis encoded using the Bravyi-Kitaev encoding, this would come in the form<sup>[1]</sup>\n",
     "\n",
