added little change on theory of trotterization

--- a/FinalProject_Updated.ipynb
+++ b/FinalProject_Updated.ipynb
@@ -428,7 +428,7 @@
    "source": [
     "### Trotterization approximation to the time-evolution operator\n",
     "\n",
-    "PEA works by preparing an initial state on the main qubit register, y-rotating the ancilla qubit's state into a superposition of |0>'s and |1>'s, applying the unitary $U$ to the main qubit register controlled on the ancilla, reversing the y-rotation, and measuring. For the molecular energies we are interested in, the unitary matrix will be the time evolution operator representing the Hamiltonian One of the most common ways to implement time evolution is through Trotterization.\n",
+    "PEA works by preparing an initial state on the main qubit register, y-rotating the ancilla qubit's state into a superposition of $|0\\rangle$ and $|1\\rangle$, applying the unitary $U$ to the main qubit register controlled on the ancilla, reversing the y-rotation, and measuring. For the molecular energies we are interested in, the unitary matrix will be the time evolution operator representing the Hamiltonian. One of the most common ways to implement time evolution is through Trotterization.\n",
     "\n",
     "As we in this class, Chemistry 560, learned when we implemented the Variational Quantum Eigensolver (VQE), it is not always straightforward to express a Hamiltonian directly on a quantum device. One way to remedy this issue is to decompose the Hamiltonian into tensor products of Pauli matrices. For the second-quantized hydrogen molecular Hamiltonian in the Hartree-Fock basis encoded using the Bravyi-Kitaev encoding, this would come in the form<sup>[1]</sup>\n",
     "\n",
