--- a/FinalProject_Updated.ipynb
+++ b/FinalProject_Updated.ipynb
@@ -1285,6 +1285,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Conclusion\n",
+    "\n",
+    "We perform the implementation of Trotterized time-evolution operator and measure the molecular energy using iterative PEA. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## References\n",
     "\n",
     "<sup>[1]</sup> P.J.J. O'Malley, R. Babbush, I.D. Kivlichan, J. Romero, J.R. McClean, R. Barends, J. Kelly, P. Roushan, A. Tranter, N. Ding <em>et al</em>., <em>Scalable Quantum Simulation of Molecular Energies</em>, Phys. Rev. X **6**, 031007 (2016)\n",
